// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Atom / Btn [SNAPSHOT] Anchor 렌더링 1`] = `
.c0 {
  line-height: 1.4rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  cursor: pointer;
  pointer-events: auto;
  width: 18rem;
  -webkit-user-drag: none;
  display: inline-block;
  padding: 1.2rem 2rem;
  border-radius: 0.3rem;
  border-color: transparent;
  outline: none;
  text-align: center;
  height: 4rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: opacity ease 0.2s,background-color ease 0.2s,color ease 0.2s;
  transition: opacity ease 0.2s,background-color ease 0.2s,color ease 0.2s;
  border-style: solid;
  border-width: thin;
}

.c0:hover {
  line-height: 1.3;
}

<Btn
  content="Button"
  href="https://naver.com"
  styletype="primary"
>
  <styled.a
    href="https://naver.com"
    styletype="primary"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  ",
              "
  ",
              [Function],
              "
  line-height: 1.4rem;
  background-color: ",
              [Function],
              ";
  flex-shrink: 0;
  flex-grow: ",
              [Function],
              ";
  cursor: ",
              [Function],
              ";
  pointer-events: ",
              [Function],
              ";
  width: ",
              [Function],
              ";
  color: ",
              [Function],
              ";
  -webkit-user-drag: none;
  display: inline-block;
  padding: 1.2rem 2rem;
  border-radius: 0.3rem;
  border-color: ",
              [Function],
              ";
  outline: none;
  text-align: center;
  height: ",
              [Function],
              ";
  user-select: none;
  transition: opacity ease 0.2s, background-color ease 0.2s, color ease 0.2s;
  border-style: solid;
  border-width: thin;

  &:hover {
    line-height: 1.3;
    opacity: ",
              [Function],
              ";
    ",
              [Function],
              "
  }
",
              "
",
            ],
          },
          "displayName": "styled.a",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "a",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      href="https://naver.com"
      styletype="primary"
    >
      <a
        className="c0"
        href="https://naver.com"
      >
        Button
      </a>
    </StyledComponent>
  </styled.a>
</Btn>
`;

exports[`Atom / Btn [SNAPSHOT] StyledBtn 렌더링 1`] = `
.c0 {
  line-height: 1.4rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  cursor: pointer;
  pointer-events: auto;
  width: 18rem;
  -webkit-user-drag: none;
  display: inline-block;
  padding: 1.2rem 2rem;
  border-radius: 0.3rem;
  border-color: transparent;
  outline: none;
  text-align: center;
  height: 4rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: opacity ease 0.2s,background-color ease 0.2s,color ease 0.2s;
  transition: opacity ease 0.2s,background-color ease 0.2s,color ease 0.2s;
  border-style: solid;
  border-width: thin;
  line-height: 0;
}

.c0:hover {
  line-height: 1.3;
}

<Btn
  content="Button"
  styletype="primary"
>
  <styled.button
    styletype="primary"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  ",
              "
  ",
              [Function],
              "
  line-height: 1.4rem;
  background-color: ",
              [Function],
              ";
  flex-shrink: 0;
  flex-grow: ",
              [Function],
              ";
  cursor: ",
              [Function],
              ";
  pointer-events: ",
              [Function],
              ";
  width: ",
              [Function],
              ";
  color: ",
              [Function],
              ";
  -webkit-user-drag: none;
  display: inline-block;
  padding: 1.2rem 2rem;
  border-radius: 0.3rem;
  border-color: ",
              [Function],
              ";
  outline: none;
  text-align: center;
  height: ",
              [Function],
              ";
  user-select: none;
  transition: opacity ease 0.2s, background-color ease 0.2s, color ease 0.2s;
  border-style: solid;
  border-width: thin;

  &:hover {
    line-height: 1.3;
    opacity: ",
              [Function],
              ";
    ",
              [Function],
              "
  }
",
              "
  line-height: 0;
",
            ],
          },
          "displayName": "styled.button",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      styletype="primary"
    >
      <button
        className="c0"
      >
        Button
      </button>
    </StyledComponent>
  </styled.button>
</Btn>
`;

exports[`Atom / Btn [SNAPSHOT] StyledLink 렌더링 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Switch />
  </Router>
</BrowserRouter>
`;
